# SAUSAU_projekat

./: .gitignore  README.md  SAUSAU_dokumentacija.docx  pyproject.toml  requirements.txt
app/: app.py
models/: scaler.pkl  xgb_bazicni.pkl
src/: data_preparation.py  evaluate.py  predict.py  train.py
