[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bems-energy-prediction"
version = "1.0.0"
description = "Predikcija potrošnje energije u zgradama (BEMS)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "seaborn",
    "joblib",
    "streamlit",
    "fastapi",
    "uvicorn",
    "pydantic"
]